redirect to refurbtech.mengsrun-nit.com

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mengsrun</title>
 </head>
+<script>
+    // redirect to google.com 
+    window.location.href = "https://refurbtech.mengsrun-nit.com/";
+</script>
 <body>
     <h1> Mengsrun Nit</h1>
 
